# Go-VerusHash

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  README_HP.md  blockhash.cpp  dependencies.go  go.mod  hash.h  main.go  prevector.h  solutiondata.h  streams.h  verushash.cxx  verushash.go  verushash.i  verushash_wrap.cxx
.github/workflows/: c-cpp.yml
compat/: endian.h  glibc_compat.cpp
config/: bitcoin-config.h  bitcoin-config.h.in
include/: uint256.h
src/: ripemd160.cpp  verus_clhash.cpp  verus_hash.cpp
verushash/: CMakeLists.txt  VH.go  blockhash.cpp  dependencies.go  hash.h  mmr.h  serialize.h  solutiondata.h  verushash.cxx  verushash.go  verushash.h  verushash.i  verushash_wrap.cxx
verushash/compat/: compat.go  endian.h
verushash/crypto/: common.h  crypto.go  haraka.c  haraka.h  haraka_portable.c  haraka_portable.h  keccak.c  uint256.h  utilstrencodings.cpp  utilstrencodings.h  verus_clhash.cpp  verus_clhash.h  verus_clhash_portable.cpp  verus_hash.cpp  verus_hash.h
verushash/crypto/sodium/: sodium.go
verushash/support/: cleanse.cpp  support.go
verushash/support/allocators/: allocators.go  zeroafterfree.h
